# obfusion

./: .gitignore  CMakeLists.txt  build.sh  run.sh
include/OBFS/: BogusCFG.h  BogusControlFlow.h  Common.h  Constant.h  ConstantEncrypt.h  Flattening.h  OpaquePredicates.h  TestPass.h  TestPass1.h
src/: BogusCFG.cpp  BogusControlFlow.cpp  CMakeLists.txt  Constant.cpp  ConstantEncrypt.cpp  CryptoUtils.cpp  Flattening.cpp  OpaquePredicates.cpp  Registration.cpp  TestPass.cpp  TestPass1.cpp
src/TestPass/: CMakeLists.txt  TestPass.cpp
